--- a/frontend/src/Components/StyleElement/Auth.css
+++ b/frontend/src/Components/StyleElement/Auth.css
@@ -69,3 +69,14 @@
     text-decoration: underline;
   }
   
+  /* .video{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -1;
+    transform: translate(-50%, -50%);
+  } */
