--- a/frontend/src/Components/StyleElement/Login.css
+++ b/frontend/src/Components/StyleElement/Login.css
@@ -8,6 +8,13 @@
     background-color: #f2f2f2; /* Light background color */
     font-family: 'Arial', sans-serif;
   }
+  .login-form{
+    background-color: white;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    width: 350px;
+  }
   
   .login-container h2 {
     margin-bottom: 20px;
