--- a/frontend/src/Components/StyleElement/BusSearchResults.css
+++ b/frontend/src/Components/StyleElement/BusSearchResults.css
@@ -1,5 +1,19 @@
 /* Bus Search Results Container */
 /* Search Bar Styles */
+
+
+.filter-button button {
+    padding: 10px 20px;
+    background-color: #3b82f6; /* Main color */
+    color: #fff;
+    border: none;
+    border-radius: 20px;
+    font-size: 0.5rem;
+    cursor: pointer;
+    width: fit-content;
+    transition: background-color 0.3s ease;
+  }
+  
 .search-bar {
   display: flex;
   justify-content: center;
@@ -66,6 +80,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 }
 
 /* Heading Style */
@@ -73,20 +88,22 @@
   font-size: 2rem;
   color: #3b82f6; /* Main color */
   margin-bottom: 20px;
+
 }
 
 /* Wrapper for bus cards */
 .bus-cards-wrapper {
   display: flex;
   flex-direction: column; /* Ensure cards are stacked vertically */
-  gap: 20px;
-  width: 100%; /* Full width for the wrapper */
+  gap: 5px;
+  width: 80%; /* Full width for the wrapper */
   padding-bottom: 10px;
 }
 
 /* Bus card style */
 .bus-card {
-  display: flex;
+  display:grid;
+  width: 100%;
   flex-direction: column;
   justify-content: space-between;
   padding: 20px;
@@ -95,9 +112,9 @@
   background-color: #f1f5f9; /* Light gray background */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
-  width: 100%; /* Full width for each card */
+  width: 500%; /* Full width for each card */
   max-width: 1200px; /* Ensure card doesn’t exceed container width */
-  margin: 0 auto; /* Center card if container is larger */
+  margin-left: 30px; /* Center card if container is larger */
 }
 
 .bus-card:hover {
@@ -135,10 +152,12 @@
   font-size: 1em;
   transition: background-color 0.3s ease;
   margin-top: 20px;
+  width: fit-content;
 }
 
 .book-button:hover {
-  background-color: #2563eb; /* Slightly darker on hover */
+  background-color: #2563eb;
+  /* Slightly darker on hover */
 }
 
 
